--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         go-version: 1.20
 
+    - name: Install
+      run: go mod download
+
     - name: Build
       run: go build -v ./...
 
